gclogs.com info

--- a/safepoint-analyzer-web/src/main/resources/templates/index.html
+++ b/safepoint-analyzer-web/src/main/resources/templates/index.html
@@ -30,24 +30,14 @@
                 <h2>Standalone JVM log analyzer:</h2>
                 <div>
                     <span>
-                        I'm working on standalone version of GC/JVM logs viewer. Currently I have to decide if I want it to be open source project
-                        or commercial one. Difference between online and standalone version:
-                        <ul>
-                            <li>No file size limit</li>
-                            <li>No sending file to internet</li>
-                        </ul>
-                        Limitations of standalone version:
-                        <ul>
-                            <li>GC logs from JDK 8 will not be supported</li>
-                        </ul>
-                        If you would like to have standalone version, please fill <a class="must-read" href="https://docs.google.com/forms/d/e/1FAIpQLSem4oVqCqUqX8UZqkbK-aryDRGASJe0Bdh91gXbLscjaowK4g/viewform?usp=sf_link">pool</a> (2 questions, 30 seconds of your time).
+                        Open source on <a class="must-read" href="https://github.com/krzysztofslusarski/jvm-gc-logs-analyzer">GitHub.</a>
                     </span>
                 </div>
             </div>
             <br>
             <div>
-                <h2>JVM performance articles and open source projects:</h2>
-                On <a class="must-read" href="https://krzysztofslusarski.github.io/">GitHub.</a>
+                <h2>JVM performance articles and other open source projects:</h2>
+                <a class="must-read" href="https://krzysztofslusarski.github.io/">GitHub.</a>
             </div>
         </div>
         <br>
