--- a/safepoint-analyzer-web/src/main/resources/public/css/upload.css
+++ b/safepoint-analyzer-web/src/main/resources/public/css/upload.css
@@ -1,3 +1,8 @@
+:root {
+    --gray: #f1f0ed;
+    --background: #fff;
+}
+
 a,
 a:focus,
 a:hover {
@@ -14,20 +19,13 @@ a:hover {
     border: .05rem solid #fff;
 }
 
-html,
 body {
-    height: 100%;
-    background-color: #ddd;
+    background-color: var(--gray);
+    color: #000;
 }
 
-body {
-    display: -ms-flexbox;
-    display: -webkit-box;
-    display: flex;
-    -ms-flex-pack: center;
-    -webkit-box-pack: center;
-    justify-content: center;
-    color: #000;
+main {
+    background-color: var(--background)
 }
 
 .cover-container {
@@ -81,23 +79,4 @@ body {
 .cover .btn-lg {
     padding: .75rem 1.25rem;
     font-weight: 700;
-}
-
-.mastfoot {
-    color: rgba(0, 0, 0, .5);
-}
-
-.real-import {
-    display: none;
-}
-
-.must-read {
-    color: #d60d0d;
-    font-weight: bold;
-}
-
-.show-upload {
-    font-weight: bold;
-    font-size: 3em;
-    color: #d60d0d;
 }
