--- a/safepoint-analyzer-web/src/main/resources/templates/index.html
+++ b/safepoint-analyzer-web/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 
 <body>
 <main role="main" class="container pb-3">
-    <h1 class="display-3 text-center">Online Safepoint/GC log analyzer:</h1>
+    <h1 class="display-3 text-center">Online Safepoint/GC log analyzer</h1>
     <div class="card mb-3">
         <div class="card-body">
             <h5 class="card-title">Online analysis</h5>
@@ -35,10 +35,9 @@
     </div>
 </main>
 <footer class="footer mt-auto py-3">
-    <div class="container">
+    <div class="container text-center">
         <span class="text-muted">
-        Author: Krzysztof Ślusarski
-        Email: <a href="mailto:ks@gclogs.com" class="text-muted">ks@gclogs.com</a></span>
+        This tool is provided to you by <a href="mailto:ks@gclogs.com" class="text-muted">Krzysztof Ślusarski</a></span>
     </div>
 </footer>
 
