--- a/safepoint-analyzer-web/src/main/resources/templates/upload.html
+++ b/safepoint-analyzer-web/src/main/resources/templates/upload.html
@@ -178,10 +178,9 @@ decorators="level,tags,time,uptime,pid</code></pre>
     </div>
 </main>
 <footer class="footer mt-auto py-3">
-    <div class="container">
+    <div class="container text-center">
         <span class="text-muted">
-        Author: Krzysztof Ślusarski
-        Email: <a href="mailto:ks@gclogs.com" class="text-muted">ks@gclogs.com</a></span>
+        This tool is provided to you by <a href="mailto:ks@gclogs.com" class="text-muted">Krzysztof Ślusarski</a></span>
     </div>
 </footer>
 
