More small improvements

--- a/safepoint-analyzer-web/src/main/resources/templates/index.html
+++ b/safepoint-analyzer-web/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
     <div class="card mb-3">
         <div class="card-body">
             <h5 class="card-title">Online analysis</h5>
-            <p>If you need quick analysis of <= 10Mb file (after compression)</p>
+            <p>If you need quick analysis of <= 10Mb file (after compression).</p>
             <a class="btn btn-outline-primary" href="/upload" role="button">Try online</a>
         </div>
     </div>
@@ -27,8 +27,8 @@
     </div>
     <div class="card">
         <div class="card-body">
-            <h5 class="card-title">JVM performance articles and other open source projects:</h5>
-            <p>If you are looking for interesting cases and tips regarding garbage collection</p>
+            <h5 class="card-title">Other stuff</h5>
+            <p>If you are looking for interesting cases and tips regarding garbage collection and JVM performance.</p>
             <a class="btn btn-outline-primary" href="https://krzysztofslusarski.github.io/" role="button"
                target="_blank">Blog</a>
         </div>
